# datum

./: README.md  pyproject.toml  setup.py
.githubs/workflows/: release.yaml
datum/analysis/: train_test_distribution.py
datum/eda/: __init__.py  compare_train_test.py  feature_importance.py  visualization.py
datum/preprocessing/: __init__.py  transformer.py  utils.py
datum/preprocessing/transformers/: group_aggregator.py  imputation.py
datum/processing/: transformer.py
datum/utility/: utils.py  visualization.py
requirements/: requirements.txt  requirements_dev.txt
scripts/: indent.sh  update_pyproject.py
